k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: video-processing
  labels:
    name: video-processing
    app: cloud-video-conversion
